# TDOM-EncryptOrDecryptFile-Reborn

./: CMakeLists.txt  CMakeSettings.json  README.md  build-project-GCC.cmd  build-project-MSVC.cmd  build-project-MinGW.cmd  build-project.bat  build-project.sh  clang-format
extra/eigen/Eigen/src/Core/: DenseStorage.h
extra/eigen/Eigen/src/Core/arch/AltiVec/: PacketMath.h
extra/eigen/Eigen/src/Core/util/: Memory.h
extra/eigen/Eigen/src/SparseCore/: SparseMap.h
extra/mio/single_include/mio/: mio.hpp
include/CommonSecurity/: AEAD_Cascaded.hpp  BlockDataCryption.hpp  CommonSecurity.hpp  DataHashingWrapper.hpp  RefactoringCodeImplement.hpp  SecureRandomUtilLibrary.hpp  Shamir's-SecretSharing.hpp  StreamDataCryption.hpp
include/CommonSecurity/BlockCiphers/: AlgorithmAES.hpp  AlgorithmChinaShangYongMiMa4.hpp  AlgorithmCorrectedBlockTEA.hpp  AlgorithmRC6.hpp  AlgorithmSerpent.hpp  AlgorithmThreefish.hpp  AlgorithmTripleDES.hpp  AlgorithmTwofish.hpp
include/CommonSecurity/DeterministicRandomBitGenerator/: BasedAlgorithmHMAC.hpp
include/CommonSecurity/KeyDerivationFunction/: AlgorithmArgon2.hpp  AlgorithmHMAC.hpp  AlgorithmScrypt.hpp
include/CommonSecurity/SecureHashProvider/: AlgorithmBlake2.hpp  AlgorithmBlake3.hpp  AlgorithmChinaShangYongMiMa3.hpp  AlgorithmVersion2.hpp  AlgorithmVersion3.hpp  Hasher.hpp  SecureHashProviderBase.hpp
include/CommonToolkit/: BytesExchangeInteger.hpp  CPP2020_Concept.hpp  CommonToolkit.hpp
include/CustomSecurity/: ByteSubstitutionBoxToolkit.hpp  CrypticDataThreadingWrapper.hpp  CryptionWorker.hpp  CustomCryption.hpp  DataObfuscator.hpp  TDOM_HashModule --- SecureCustomHash.md  WonderfulDesignIdeas.hpp
include/FileProcessing/: FileOperation.hpp  FileOperationNew.hpp  FileProcessing.hpp  MemoryMappingByFile.hpp
include/FileProcessing/c-plus-plus-serializer-master/: c_plus_plus_serializer.h
include/FileProcessing/c-plus-plus-serializer-master/examples/: basic_example.cpp
include/Support+Library/: DataAtomizedWrapper.hpp  Support-Library.hpp  Support-MyType.hpp
include/ThreadingToolkit/: AuxiliaryDeclaration.hpp  ThreadSafeQueue.hpp
include/ThreadingToolkit/Pool/Version1/: ThreadPool.hpp
include/ThreadingToolkit/Pool/Version2/: ThreadPool.hpp
include/ThreadingToolkit/Pool/Version3/: ThreadPool.hpp
include/ThreadingToolkit/Time/: TimedThreadExecutor.hpp
include/ThreadingToolkit/Wrapper/: AsyncTaskWrapper.hpp
include/UtilTools/: Base64Coder.hpp  CompressDataProcessing.hpp  DataFormating.hpp  DataStreamConverter.hpp  UtilTools.hpp
source-code/: IsFor_EODF_Reborn.hpp  Main.cpp  UnitTester.hpp
